--- a/src/html/13_words.html
+++ b/src/html/13_words.html
@@ -24,8 +24,8 @@
   <!--[if lte IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
-   <!-- build:head -->
-   
+  <!-- build:head -->
+
   <header class="comm-header">
     <div class="midd_header clearfix">
       <div class="index_icon">
@@ -51,7 +51,7 @@
     </div>
   </header>
 
-   <!-- endbuild -->
+  <!-- endbuild -->
 
   <div class="wrap">
     <div class="main words-main">
@@ -113,80 +113,129 @@
                     <div class="table-switch-inner"></div>
                   </div>
                   <span class="tit">隐藏全部</span>
-                </div></th>
+                </div>
+              </th>
             </thead>
             <tbody>
               <tr>
                 <td>1</td>
                 <td>[w3:d]</td>
-                <td><span>word</span></td>
-                <td><span>单词</span></td>
+                <td>
+                  <span>word</span>
+                </td>
+                <td>
+                  <span>单词</span>
+                </td>
               </tr>
               <tr>
                 <td>2</td>
                 <td>[w3:d]</td>
-                <td><span>word</span></td>
-                <td><span>单词</span></td>
+                <td>
+                  <span>word</span>
+                </td>
+                <td>
+                  <span>单词</span>
+                </td>
               </tr>
               <tr>
                 <td>3</td>
                 <td>[w3:d]</td>
-                <td><span>word</span></td>
-                <td><span>单词</span></td>
+                <td>
+                  <span>word</span>
+                </td>
+                <td>
+                  <span>单词</span>
+                </td>
               </tr>
               <tr>
                 <td>4</td>
                 <td>[w3:d]</td>
-                <td><span>word</span></td>
-                <td><span>单词</span></td>
+                <td>
+                  <span>word</span>
+                </td>
+                <td>
+                  <span>单词</span>
+                </td>
               </tr>
               <tr>
                 <td>5</td>
                 <td>[w3:d]</td>
-                <td><span>word</span></td>
-                <td><span>单词</span></td>
+                <td>
+                  <span>word</span>
+                </td>
+                <td>
+                  <span>单词</span>
+                </td>
               </tr>
               <tr>
                 <td>6</td>
                 <td>[w3:d]</td>
-                <td><span>word</span></td>
-                <td><span>单词</span></td>
+                <td>
+                  <span>word</span>
+                </td>
+                <td>
+                  <span>单词</span>
+                </td>
               </tr>
               <tr>
                 <td>7</td>
                 <td>[w3:d]</td>
-                <td><span>word</span></td>
-                <td><span>单词</span></td>
+                <td>
+                  <span>word</span>
+                </td>
+                <td>
+                  <span>单词</span>
+                </td>
               </tr>
               <tr>
                 <td>8</td>
                 <td>[w3:d]</td>
-                <td><span>word</span></td>
-                <td><span>单词</span></td>
+                <td>
+                  <span>word</span>
+                </td>
+                <td>
+                  <span>单词</span>
+                </td>
               </tr>
               <tr>
                 <td>9</td>
                 <td>[w3:d]</td>
-                <td><span>word</span></td>
-                <td><span>单词</span></td>
+                <td>
+                  <span>word</span>
+                </td>
+                <td>
+                  <span>单词</span>
+                </td>
               </tr>
               <tr>
                 <td>10</td>
                 <td>[w3:d]</td>
-                <td><span>word</span></td>
-                <td><span>单词</span></td>
+                <td>
+                  <span>word</span>
+                </td>
+                <td>
+                  <span>单词</span>
+                </td>
               </tr>
               <tr>
                 <td>11</td>
                 <td>[w3:d]</td>
-                <td><span>word</span></td>
-                <td><span>单词</span></td>
+                <td>
+                  <span>word</span>
+                </td>
+                <td>
+                  <span>单词</span>
+                </td>
               </tr>
               <tr>
                 <td>12</td>
                 <td>[w3:d]</td>
-                <td><span>word</span></td>
-                <td><span>单词</span></td>
+                <td>
+                  <span>word</span>
+                </td>
+                <td>
+                  <span>单词</span>
+                </td>
               </tr>
             </tbody>
           </table>
@@ -196,6 +245,48 @@
   </div>
   <!-- build:foot -->
   <!-- 底部 -->
+  <div class="xc-banner">
+    <div class="xc-banner-marker"></div>
+    <div class="xc-banner-body">
+      <h2 class="xc-banner-title">教程说明
+        <img class="xc-banner-close" src="../img/xc-banner-close.png" alt="">
+      </h2>
+      <div class="xc-banner-items-box">
+        <div class="xc-banner-items">
+          <div class="xc-banner-item active">
+            <img class="xc-banner-img" src="../img/xc_duizi_1.png" alt="教程">
+          </div>
+          <div class="xc-banner-item">
+            <img class="xc-banner-img" src="../img/xc_duizi_2.png" alt="教程">
+          </div>
+          <div class="xc-banner-item">
+            <img class="xc-banner-img" src="../img/xc_duizi_3.png" alt="教程">
+          </div>
+          <div class="xc-banner-item">
+            <img class="xc-banner-img" src="../img/xc_duizi_4.png" alt="教程">
+          </div>
+          <div class="xc-banner-item">
+            <img class="xc-banner-img" src="../img/xc_duizi_5.png" alt="教程">
+          </div>
+          <div class="xc-banner-item">
+            <img class="xc-banner-img" src="../img/xc_duizi_6.png" alt="教程">
+          </div>
+          <div class="xc-banner-item">
+            <img class="xc-banner-img" src="../img/xc_duizi_7.png" alt="教程">
+          </div>
+          <div class="xc-banner-item">
+            <img class="xc-banner-img" src="../img/xc_duizi_8.png" alt="教程">
+          </div>
+        </div>
+      </div>
+      <div class="xc-banner-btns">
+        <span class="active">1</span>/
+        <span>8</span>
+        <span class="xc-banner-btn xc-banner-prv"></span>
+        <span class="xc-banner-btn xc-banner-next"></span>
+      </div>
+    </div>
+  </div>
   <div class="footer">
     <div class="footer-ct">
       <div class="tel-wp">
