--- a/src/html/studyreport_all_info_2.html
+++ b/src/html/studyreport_all_info_2.html
@@ -17,7 +17,10 @@
   <link rel="stylesheet" href="../vendor/sweetalert/dist/sweetalert.css">
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
+  <link rel="stylesheet" href="../js/vendor/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css">
   <!-- endbuild -->
+
+
   <link rel="stylesheet" href="../vendor/raphael/raphael.js">
   <link rel="stylesheet" href="../vendor/morris.js/morris.css">
   <link rel="stylesheet" href="../css/wj.css">
@@ -66,6 +69,8 @@
       </nav>
     </header>
     <!-- endbuild -->
+
+
 
 
 
@@ -197,6 +202,8 @@
 
 
 
+
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -214,10 +221,10 @@
         <div class="row">
           <div class="col-xs-12">
             <div class="mb-20">
-              <a class="wj-a" href="javascript:;">今日学况</a>
-              <a class="wj-a wj-a-active" href="javascript:;">学习日记</a>
-              <a class="wj-a" href="javascript:;">学习记录</a>
-              <a class="wj-a" href="javascript:;">学习地图</a>
+              <a class="wj-a" href="./studyreport_all_info.html">今日学况</a>
+              <a class="wj-a wj-a-active" href="./studyreport_all_info_2.html">学习日记</a>
+              <a class="wj-a" href="./studyreport_all_info_3.html">学习记录</a>
+              <a class="wj-a" href="./studyreport_all_info_4.html">学习地图</a>
             </div>
             <div class="panel panel-default">
               <div class="panel-heading">
@@ -292,6 +299,8 @@
 
 
 
+
+
   </div>
   <!-- build:js -->
   <!-- =============== JS ===============-->
@@ -307,6 +316,8 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
+
   <script src="../vendor/raphael/raphael.js"></script>
   <script src="../vendor/morris.js/morris.js"></script>
   <script src="../js/studyreport.js"></script>
