--- a/src/html/coursemanagement_task.html
+++ b/src/html/coursemanagement_task.html
@@ -17,7 +17,9 @@
   <link rel="stylesheet" href="../vendor/sweetalert/dist/sweetalert.css">
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
+  <link rel="stylesheet" href="../js/vendor/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css">
   <!-- endbuild -->
+
 
   <link rel="stylesheet" href="../css/wj.css">
 
@@ -65,6 +67,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -184,6 +187,7 @@
       </div>
     </aside>
     <!-- endbuild -->
+
 
 
 
@@ -411,32 +415,33 @@
                     <!-- 智能培优 end -->
                      <!-- build:pages -->
                      <!-- 分页 -->
-                      <div class="row">
-                        <div class="pagination-fa col-lg-4 col-lg-offset-8 text-right">
-                          <ul class="pagination pagination-sm m0">
-                            <li>
-                              <a href="#" aria-label="Previous">
-                                <span aria-hidden="true">«</span>
-                              </a>
-                            </li>
-                            <li>
-                              <a href="#">1</a>
-                            </li>
-                            <li>
-                              <a href="#">2</a>
-                            </li>
-                            <li class="active">
-                              <a href="#">3</a>
-                            </li>
-                            <li>
-                              <a href="#" aria-label="Next">
-                                <span aria-hidden="true">»</span>
-                              </a>
-                            </li>
-                          </ul>
-                        </div>
-                      </div>  
+                <div class="row">
+                  <div class="pagination-fa col-lg-4 col-lg-offset-8 text-right">
+                    <ul class="pagination pagination-sm m0">
+                      <li>
+                        <a href="#" aria-label="Previous">
+                          <span aria-hidden="true">«</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">1</a>
+                      </li>
+                      <li>
+                        <a href="#">2</a>
+                      </li>
+                      <li class="active">
+                        <a href="#">3</a>
+                      </li>
+                      <li>
+                        <a href="#" aria-label="Next">
+                          <span aria-hidden="true">»</span>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>  
                      <!-- endbuild -->
+
 
                   </div>
                 </div>
@@ -452,6 +457,7 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -476,6 +482,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
   <script src="../js/coursemanagement.js"></script>
 
