--- a/src/html/mall.html
+++ b/src/html/mall.html
@@ -17,7 +17,9 @@
   <link rel="stylesheet" href="../vendor/sweetalert/dist/sweetalert.css">
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
+  <link rel="stylesheet" href="../js/vendor/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css">
   <!-- endbuild -->
+
 
   <link rel="stylesheet" href="../css/wj.css">
 
@@ -66,6 +68,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -183,6 +186,7 @@
       </div>
     </aside>
     <!-- endbuild -->
+
 
 
 
@@ -333,33 +337,34 @@
           </div>
         </div>
         <!-- build:pages -->
-            <!-- 分页 -->
-            <div class="row">
-                <div class="pagination-fa col-lg-4 col-lg-offset-8 text-right">
-                  <ul class="pagination pagination-sm m0">
-                    <li>
-                      <a href="#" aria-label="Previous">
-                        <span aria-hidden="true">«</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#">1</a>
-                    </li>
-                    <li>
-                      <a href="#">2</a>
-                    </li>
-                    <li class="active">
-                      <a href="#">3</a>
-                    </li>
-                    <li>
-                      <a href="#" aria-label="Next">
-                        <span aria-hidden="true">»</span>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </div>  
-              <!-- endbuild -->
+        <!-- 分页 -->
+                <div class="row">
+                  <div class="pagination-fa col-lg-4 col-lg-offset-8 text-right">
+                    <ul class="pagination pagination-sm m0">
+                      <li>
+                        <a href="#" aria-label="Previous">
+                          <span aria-hidden="true">«</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">1</a>
+                      </li>
+                      <li>
+                        <a href="#">2</a>
+                      </li>
+                      <li class="active">
+                        <a href="#">3</a>
+                      </li>
+                      <li>
+                        <a href="#" aria-label="Next">
+                          <span aria-hidden="true">»</span>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>  
+        <!-- endbuild -->
+
       </div>
       
     </section>
@@ -370,6 +375,7 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -392,6 +398,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 <script src="../js/mall.js"></script>
 
