--- a/src/html/studyreport_all_info.html
+++ b/src/html/studyreport_all_info.html
@@ -17,7 +17,9 @@
   <link rel="stylesheet" href="../vendor/sweetalert/dist/sweetalert.css">
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
+  <link rel="stylesheet" href="../js/vendor/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css">
   <!-- endbuild -->
+
   <link rel="stylesheet" href="../css/wj.css">
 
 
@@ -64,6 +66,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -195,6 +198,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -269,7 +273,6 @@
                       </tr>
                     </tbody>
                   </table>
-                  <a class="btn btn-primary jq-changeclass" href="javascript:;">调换班级</a>
                 </div>
   
                 <!-- build:pages -->
@@ -300,6 +303,7 @@
                   </div>
                 </div>  
                 <!-- endbuild -->
+
   
   
   
@@ -334,6 +338,7 @@
 
 
 
+
   </div>
 
   <!-- build:js -->
@@ -350,6 +355,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
  
 
