--- a/src/html/studyreport_all_info_3.html
+++ b/src/html/studyreport_all_info_3.html
@@ -17,7 +17,10 @@
   <link rel="stylesheet" href="../vendor/sweetalert/dist/sweetalert.css">
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
+  <link rel="stylesheet" href="../js/vendor/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css">
   <!-- endbuild -->
+
+
   <link rel="stylesheet" href="../css/wj.css">
 
 
@@ -64,6 +67,8 @@
       </nav>
     </header>
     <!-- endbuild -->
+
+
 
 
 
@@ -195,6 +200,8 @@
 
 
 
+
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -212,20 +219,41 @@
         <div class="row">
           <div class="col-xs-12">
             <div class="mb-20">
-              <a class="wj-a" href="javascript:;">今日学况</a>
-              <a class="wj-a wj-a-active" href="javascript:;">学习日记</a>
-              <a class="wj-a" href="javascript:;">学习记录</a>
-              <a class="wj-a" href="javascript:;">学习地图</a>
+              <a class="wj-a" href="./studyreport_all_info.html">今日学况</a>
+              <a class="wj-a" href="./studyreport_all_info_2.html">学习日记</a>
+              <a class="wj-a wj-a-active" href="./studyreport_all_info_3.html">学习记录</a>
+              <a class="wj-a" href="./studyreport_all_info_4.html">学习地图</a>
             </div>
             <div class="panel panel-default">
-              <div class="panel-heading">学习时长</div>
-              <div class="panel-body">
-                <p><span class="width-100">在线时长</span><span>02:20:31</span></p>
-                <p><span class="width-100">有效时长</span><span>02:20:31</span></p>
-                <p><span class="width-100">有效时长占比</span><span>100%</span></p>
-              </div>
               <!-- START table-responsive-->
             <div class="panel-heading">
+              <form class="form-lineH">
+                  <div class="row">
+                    <label class="col-sm-1">时间段</label>
+                    <div class="form-group col-sm-2">
+                      <div class="radio c-radio">
+                        <label>
+                            <input type="radio" name="a" value="option1">
+                            <span class="fa fa-circle"></span>最近30天</label>
+                      </div>
+                    </div>
+                    <div class="form-group col-sm-6">
+                      <div class="radio c-radio col-sm-4">
+                        <label>
+                            <input type="radio" name="a" value="option1">
+                            <span class="fa fa-circle"></span>查询开始时间</label>
+                      </div>
+                      <div class="col-sm-6">
+                          <p class="input-group date datetimepicker2">
+                            <input type="text" class="form-control" placeholder="请选择开始时间">
+                            <span class="input-group-addon">
+                                <span class="fa fa-calendar"></span>
+                            </span>
+                          </p>
+                        </div>
+                    </div>
+                  </div>
+                </form>
                 <div class="table-responsive">
                   <table class="table table-bordered table-hover dataTable">
                     <thead>
@@ -264,12 +292,11 @@
                         <td>同步课程-智学单词</td>
                         <td>智能预习</td>
                         <td>牛津上海版  七年级上册  Unit2</td>
-                        <td>完成</td>
+                        <td class="text-danger">未通过</td>
                         <td>120</td>
                       </tr>
                     </tbody>
                   </table>
-                  <a class="btn btn-primary jq-changeclass" href="javascript:;">调换班级</a>
                 </div>
   
                 <!-- build:pages -->
@@ -300,6 +327,8 @@
                   </div>
                 </div>  
                 <!-- endbuild -->
+
+
   
   
   
@@ -334,6 +363,8 @@
 
 
 
+
+
   </div>
 
   <!-- build:js -->
@@ -350,6 +381,9 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
+  <script src="../js/studyreport.js"></script>
+
 
 
 
