--- a/src/html/studyreport_overall.html
+++ b/src/html/studyreport_overall.html
@@ -17,7 +17,9 @@
   <link rel="stylesheet" href="../vendor/sweetalert/dist/sweetalert.css">
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
+  <link rel="stylesheet" href="../js/vendor/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css">
   <!-- endbuild -->
+
   <link rel="stylesheet" href="../css/wj.css">
 
 
@@ -64,6 +66,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -183,6 +186,7 @@
       </div>
     </aside>
     <!-- endbuild -->
+
 
 
 
@@ -396,6 +400,7 @@
 
 
 
+
   </div>
 
   <!-- build:js -->
@@ -412,6 +417,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
