--- a/src/html/exchangemanagement_not.html
+++ b/src/html/exchangemanagement_not.html
@@ -374,7 +374,7 @@
   <script src="../js/vendor/animo.js/animo.js"></script>
   <script src="../js/vendor/jquery-localize-i18n/dist/jquery.localize.js"></script>
   <script src="../vendor/sweetalert/dist/sweetalert.min.js"></script>
-  <script src="../../js/vendor/moment/min/moment-with-locales.min.js"></script>
+  <script src="../js/vendor/moment/min/moment-with-locales.min.js"></script>
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
