--- a/src/html/studentmanagement_recharge.html
+++ b/src/html/studentmanagement_recharge.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="../js/vendor/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css">
   <!-- endbuild -->
 
+
   <link rel="stylesheet" href="../css/wj.css">
 
 
@@ -66,6 +67,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -189,6 +191,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -213,7 +216,9 @@
                     </div>
                   </div>
                   <div class="row">
-                    <label class="col-sm-1">选择学生</label>
+                    <div class="form-group col-sm-2">
+                      <label class="col-sm-12">选择学生：</label>
+                    </div>
                     <div class="form-group col-sm-2">
                       <div class="radio c-radio">
                         <label>
@@ -369,6 +374,7 @@
 
 
 
+
               </div>
             </div>
           </div>
@@ -388,6 +394,7 @@
 
 
 
+
   </div>
 
   <!-- build:js -->
@@ -400,10 +407,11 @@
   <script src="../js/vendor/animo.js/animo.js"></script>
   <script src="../js/vendor/jquery-localize-i18n/dist/jquery.localize.js"></script>
   <script src="../vendor/sweetalert/dist/sweetalert.min.js"></script>
-  <script src="../../js/vendor/moment/min/moment-with-locales.min.js"></script>
+  <script src="../js/vendor/moment/min/moment-with-locales.min.js"></script>
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
   <script src="../js/studentmanagement.js"></script>
 
