--- a/src/html/studyreport_all_info.html
+++ b/src/html/studyreport_all_info.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="../js/vendor/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css">
   <!-- endbuild -->
 
+
   <link rel="stylesheet" href="../css/wj.css">
 
 
@@ -66,6 +67,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -199,6 +201,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -304,6 +307,7 @@
                 </div>  
                 <!-- endbuild -->
 
+
   
   
   
@@ -339,6 +343,7 @@
 
 
 
+
   </div>
 
   <!-- build:js -->
@@ -351,10 +356,11 @@
   <script src="../js/vendor/animo.js/animo.js"></script>
   <script src="../js/vendor/jquery-localize-i18n/dist/jquery.localize.js"></script>
   <script src="../vendor/sweetalert/dist/sweetalert.min.js"></script>
-  <script src="../../js/vendor/moment/min/moment-with-locales.min.js"></script>
+  <script src="../js/vendor/moment/min/moment-with-locales.min.js"></script>
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
  
