--- a/src/html/studyreport_all_info_3.html
+++ b/src/html/studyreport_all_info_3.html
@@ -21,6 +21,8 @@
   <!-- endbuild -->
 
 
+
+
   <link rel="stylesheet" href="../css/wj.css">
 
 
@@ -67,6 +69,8 @@
       </nav>
     </header>
     <!-- endbuild -->
+
+
 
 
 
@@ -190,6 +194,8 @@
       </div>
     </aside>
     <!-- endbuild -->
+
+
 
 
 
@@ -329,6 +335,8 @@
                 <!-- endbuild -->
 
 
+
+
   
   
   
@@ -365,6 +373,8 @@
 
 
 
+
+
   </div>
 
   <!-- build:js -->
@@ -377,10 +387,12 @@
   <script src="../js/vendor/animo.js/animo.js"></script>
   <script src="../js/vendor/jquery-localize-i18n/dist/jquery.localize.js"></script>
   <script src="../vendor/sweetalert/dist/sweetalert.min.js"></script>
-  <script src="../../js/vendor/moment/min/moment-with-locales.min.js"></script>
+  <script src="../js/vendor/moment/min/moment-with-locales.min.js"></script>
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
+
 
   <script src="../js/studyreport.js"></script>
 
