--- a/src/html/studyreport_all_info_4.html
+++ b/src/html/studyreport_all_info_4.html
@@ -21,6 +21,7 @@
   <!-- endbuild -->
 
 
+
   <link rel="stylesheet" href="../css/wj.css">
 
 
@@ -67,6 +68,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -190,6 +192,7 @@
       </div>
     </aside>
     <!-- endbuild -->
+
 
 
 
@@ -501,32 +504,33 @@
                       <!-- 按详情 end -->
                        <!-- build:pages -->
                        <!-- 分页 -->
-                        <div class="row">
-                          <div class="pagination-fa col-lg-4 col-lg-offset-8 text-right">
-                            <ul class="pagination pagination-sm m0">
-                              <li>
-                                <a href="#" aria-label="Previous">
-                                  <span aria-hidden="true">«</span>
-                                </a>
-                              </li>
-                              <li>
-                                <a href="#">1</a>
-                              </li>
-                              <li>
-                                <a href="#">2</a>
-                              </li>
-                              <li class="active">
-                                <a href="#">3</a>
-                              </li>
-                              <li>
-                                <a href="#" aria-label="Next">
-                                  <span aria-hidden="true">»</span>
-                                </a>
-                              </li>
-                            </ul>
-                          </div>
-                        </div>  
+                <div class="row">
+                  <div class="pagination-fa col-lg-4 col-lg-offset-8 text-right">
+                    <ul class="pagination pagination-sm m0">
+                      <li>
+                        <a href="#" aria-label="Previous">
+                          <span aria-hidden="true">«</span>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">1</a>
+                      </li>
+                      <li>
+                        <a href="#">2</a>
+                      </li>
+                      <li class="active">
+                        <a href="#">3</a>
+                      </li>
+                      <li>
+                        <a href="#" aria-label="Next">
+                          <span aria-hidden="true">»</span>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>  
                        <!-- endbuild -->
+
   
   
                     </div>
@@ -557,6 +561,7 @@
 
 
 
+
   </div>
 
   <!-- build:js -->
@@ -569,10 +574,11 @@
   <script src="../js/vendor/animo.js/animo.js"></script>
   <script src="../js/vendor/jquery-localize-i18n/dist/jquery.localize.js"></script>
   <script src="../vendor/sweetalert/dist/sweetalert.min.js"></script>
-  <script src="../../js/vendor/moment/min/moment-with-locales.min.js"></script>
+  <script src="../js/vendor/moment/min/moment-with-locales.min.js"></script>
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
