--- a/src/html/mall.html
+++ b/src/html/mall.html
@@ -209,10 +209,6 @@
                 <a class="col-xs-1 jq-record" href="javascript:;">消费记录</a>
               </div>
             </div>
-            <div class="col-xs-12 mb-20">
-              <a class="wj-a" href="./studyreport_overall.html">总体报告</a>
-              <a class="wj-a wj-a-active" href="javascript:;">全部报告</a>
-            </div>
             <div class="col-xs-3">
               <div class="panel panel-info cansell">
                 <div class="panel-heading portlet-handler ui-sortable-handle">库存 699件</div>
@@ -223,7 +219,7 @@
                   <p>商品名称</p>
                   <p>
                     <span class="text-danger">￥ 1200学币</span>
-                    <button class="btn btn-primary pull-right">兑换</button>
+                    <button class="btn btn-primary pull-right btm20">兑换</button>
                   </p>
                 </div>
               </div>
