--- a/src/html/studentmanagement_coin.html
+++ b/src/html/studentmanagement_coin.html
@@ -229,40 +229,32 @@
                         </p>
                       </div>
                     </div>
-                    <div class="form-group col-sm-2">
-                      <div class="radio c-radio">
+                    <div class="form-group col-sm-4">
+                      <div class="radio-inline c-radio">
                         <label>
                            <input type="radio" name="a" value="option1">
                            <span class="fa fa-circle"></span>全部</label>
-                     </div>
-                    </div>
-                    <div class="form-group col-sm-2">
-                      <div class="radio c-radio">
+                      </div>
+                      <div class="radio-inline c-radio">
+                          <label>
+                             <input type="radio" name="a" value="option1">
+                             <span class="fa fa-circle"></span>本周</label>
+                      </div>
+                      <div class="radio-inline c-radio">
                         <label>
-                           <input type="radio" name="a" value="option1">
-                           <span class="fa fa-circle"></span>本周</label>
-                     </div>
-                    </div>
-                    <div class="form-group col-sm-2">
-                      <div class="radio c-radio">
+                            <input type="radio" name="a" value="option1">
+                            <span class="fa fa-circle"></span>上周</label>
+                      </div>
+                      <div class="radio-inline c-radio">
                         <label>
-                           <input type="radio" name="a" value="option1">
-                           <span class="fa fa-circle"></span>上周</label>
-                     </div>
-                    </div>
-                    <div class="form-group col-sm-2">
-                      <div class="radio c-radio">
+                            <input type="radio" name="a" value="option1">
+                            <span class="fa fa-circle"></span>本月</label>
+                      </div>
+                      <div class="radio-inline c-radio">
                         <label>
-                           <input type="radio" name="a" value="option1">
-                           <span class="fa fa-circle"></span>本月</label>
-                     </div>
-                    </div>
-                    <div class="form-group col-sm-2">
-                      <div class="radio c-radio">
-                        <label>
-                           <input type="radio" name="a" value="option1">
-                           <span class="fa fa-circle"></span>上月</label>
-                     </div>
+                            <input type="radio" name="a" value="option1">
+                            <span class="fa fa-circle"></span>上月</label>
+                      </div>
                     </div>
 
                   </div>
