--- a/src/html/studentmanagement_list.html
+++ b/src/html/studentmanagement_list.html
@@ -27,7 +27,7 @@
 
 </head>
 
-<body>
+<body class="body-studentmanagementlist">
   <div class="wrapper">
     <!-- build:head -->
     <header class="topnavbar-wrapper">
