--- a/src/html/exchangemanagement_not.html
+++ b/src/html/exchangemanagement_not.html
@@ -202,15 +202,8 @@
               <div class="panel-heading">
                 <form class="text-right form-lineH">
                   <div class="row">
-                    <div class="form-group col-sm-2">
-                      <label class="radio-inline c-radio">
-                          <input type="radio" name="a" value="option1">
-                          <span class="fa fa-circle"></span>全部</label>
-                    </div>
                     <div class="form-group col-sm-4">
-                        <label class="radio-inline c-radio col-sm-3">
-                            <input type="radio" name="a" value="option1">
-                            <span class="fa fa-circle"></span>选择班级</label>
+                      <label class="col-sm-3">选择班级</label>
                       <div class="col-sm-8">
                         <select name="" id="" class="form-control">
                           <option value="">全部</option>
