--- a/src/html/studentmanagement_recharge.html
+++ b/src/html/studentmanagement_recharge.html
@@ -205,6 +205,26 @@
               <div class="panel-heading">
                 <form class="form-lineH">
                   <div class="row">
+                    <div class="form-group col-sm-1">
+                      选择学生：
+                    </div>
+                    <div class="form-group col-sm-5">
+                      <div class="radio-inline c-radio">
+                        <label>
+                            <input type="radio" name="a" value="option1">
+                            <span class="fa fa-circle"></span>全部学生</label>
+                      </div>
+                      <div class="radio-inline c-radio">
+                        <label>
+                            <input type="radio" name="a" value="option1">
+                            <span class="fa fa-circle"></span>体验学生</label>
+                      </div>
+                      <div class="radio-inline c-radio">
+                        <label>
+                            <input type="radio" name="a" value="option1">
+                            <span class="fa fa-circle"></span>不看体验学生</label>
+                      </div>
+                    </div>
                     <div class="form-group col-sm-3">
                       <label class="col-sm-4">学生手机：</label>
                       <div class="col-sm-8">
@@ -213,32 +233,6 @@
                     </div>
                     <div class="col-sm-1">
                       <button type="button" class="btn btn-primary">搜索</button>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="form-group col-sm-2">
-                      <label class="col-sm-12">选择学生：</label>
-                    </div>
-                    <div class="form-group col-sm-2">
-                      <div class="radio c-radio">
-                        <label>
-                           <input type="radio" name="a" value="option1">
-                           <span class="fa fa-circle"></span>全部学生</label>
-                     </div>
-                    </div>
-                    <div class="form-group col-sm-2">
-                      <div class="radio c-radio">
-                        <label>
-                           <input type="radio" name="a" value="option1">
-                           <span class="fa fa-circle"></span>体验学生</label>
-                     </div>
-                    </div>
-                    <div class="form-group col-sm-2">
-                      <div class="radio c-radio">
-                        <label>
-                           <input type="radio" name="a" value="option1">
-                           <span class="fa fa-circle"></span>不看体验学生</label>
-                     </div>
                     </div>
                   </div>
                 </form>
