--- a/src/html/exchangemanagement_not.html
+++ b/src/html/exchangemanagement_not.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="../js/vendor/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css">
   <!-- endbuild -->
 
+
   <link rel="stylesheet" href="../css/wj.css">
 
 
@@ -66,6 +67,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -189,6 +191,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -252,7 +255,7 @@
                         <td>10</td>
                         <td>
                           <a class="btn btn-primary jq-edit" href="javascript:;">兑换</a>
-                          <a class="btn btn-primary jq-cancle" href="javascript:;">取消</a>
+                          <a class="btn btn-danger jq-cancle" href="javascript:;">取消</a>
                         </td>
                       </tr>
                       <tr>
@@ -270,7 +273,7 @@
                         <td>10</td>
                         <td>
                           <a class="btn btn-primary jq-edit" href="javascript:;">兑换</a>
-                          <a class="btn btn-primary jq-cancle" href="javascript:;">取消</a>
+                          <a class="btn btn-danger jq-cancle" href="javascript:;">取消</a>
                         </td>
                       </tr>
                       <tr>
@@ -288,13 +291,13 @@
                         <td>10</td>
                         <td>
                           <a class="btn btn-primary jq-edit" href="javascript:;">兑换</a>
-                          <a class="btn btn-primary jq-cancle" href="javascript:;">取消</a>
+                          <a class="btn btn-danger jq-cancle" href="javascript:;">取消</a>
                         </td>
                       </tr>
                     </tbody>
                   </table>
                   <a class="btn btn-primary jq-all" href="javascript:;">批量兑换</a>
-                  <a class="btn btn-primary jq-qllcancle" href="javascript:;">批量取消</a>
+                  <a class="btn btn-danger jq-qllcancle" href="javascript:;">批量取消</a>
                 </div>
 
                 <!-- build:pages -->
@@ -336,6 +339,7 @@
 
 
 
+
               </div>
             </div>
           </div>
@@ -349,6 +353,7 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -371,6 +376,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
   <script src="../js/exchangemanagement.js"></script>
 
