--- a/src/html/coursemanagement_task.html
+++ b/src/html/coursemanagement_task.html
@@ -21,6 +21,7 @@
   <!-- endbuild -->
 
 
+
   <link rel="stylesheet" href="../css/wj.css">
 
 
@@ -67,6 +68,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -196,6 +198,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -265,7 +268,7 @@
                               <td>10</td>
                               <td>
                                 <a class="btn btn-primary jq-createclass" href="javascript:;">修改</a>
-                                <a class="btn btn-primary jq-deleteclass" href="javascript:;">删除</a>
+                                <a class="btn btn-danger jq-deleteclass" href="javascript:;">删除</a>
                               </td>
                             </tr>
                             <tr>
@@ -278,7 +281,7 @@
                               <td>10</td>
                               <td>
                                 <a class="btn btn-primary jq-createclass" href="javascript:;">修改</a>
-                                <a class="btn btn-primary jq-deleteclass" href="javascript:;">删除</a>
+                                <a class="btn btn-danger jq-deleteclass" href="javascript:;">删除</a>
                               </td>
                             </tr>
                             <tr>
@@ -291,7 +294,7 @@
                               <td>10</td>
                               <td>
                                 <a class="btn btn-primary jq-createclass" href="javascript:;">修改</a>
-                                <a class="btn btn-primary jq-deleteclass" href="javascript:;">删除</a>
+                                <a class="btn btn-danger jq-deleteclass" href="javascript:;">删除</a>
                               </td>
                             </tr>
                           </tbody>
@@ -322,7 +325,7 @@
                               <td>10</td>
                               <td>
                                 <a class="btn btn-primary jq-createclass" href="javascript:;">修改</a>
-                                <a class="btn btn-primary jq-deleteclass" href="javascript:;">删除</a>
+                                <a class="btn btn-danger jq-deleteclass" href="javascript:;">删除</a>
                               </td>
                             </tr>
                             <tr>
@@ -333,7 +336,7 @@
                               <td>10</td>
                               <td>
                                 <a class="btn btn-primary jq-createclass" href="javascript:;">修改</a>
-                                <a class="btn btn-primary jq-deleteclass" href="javascript:;">删除</a>
+                                <a class="btn btn-danger jq-deleteclass" href="javascript:;">删除</a>
                               </td>
                             </tr>
                             <tr>
@@ -344,7 +347,7 @@
                               <td>10</td>
                               <td>
                                 <a class="btn btn-primary jq-createclass" href="javascript:;">修改</a>
-                                <a class="btn btn-primary jq-deleteclass" href="javascript:;">删除</a>
+                                <a class="btn btn-danger jq-deleteclass" href="javascript:;">删除</a>
                               </td>
                             </tr>
                           </tbody>
@@ -379,7 +382,7 @@
                               <td>10</td>
                               <td>
                                 <a class="btn btn-primary jq-createclass" href="javascript:;">修改</a>
-                                <a class="btn btn-primary jq-deleteclass" href="javascript:;">删除</a>
+                                <a class="btn btn-danger jq-deleteclass" href="javascript:;">删除</a>
                               </td>
                             </tr>
                             <tr>
@@ -392,7 +395,7 @@
                               <td>10</td>
                               <td>
                                 <a class="btn btn-primary jq-createclass" href="javascript:;">修改</a>
-                                <a class="btn btn-primary jq-deleteclass" href="javascript:;">删除</a>
+                                <a class="btn btn-danger jq-deleteclass" href="javascript:;">删除</a>
                               </td>
                             </tr>
                             <tr>
@@ -405,7 +408,7 @@
                               <td>10</td>
                               <td>
                                 <a class="btn btn-primary jq-createclass" href="javascript:;">修改</a>
-                                <a class="btn btn-primary jq-deleteclass" href="javascript:;">删除</a>
+                                <a class="btn btn-danger jq-deleteclass" href="javascript:;">删除</a>
                               </td>
                             </tr>
                           </tbody>
@@ -443,6 +446,7 @@
                      <!-- endbuild -->
 
 
+
                   </div>
                 </div>
             </div>
@@ -457,6 +461,7 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -482,6 +487,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
   <script src="../js/coursemanagement.js"></script>
