--- a/src/html/mall.html
+++ b/src/html/mall.html
@@ -21,6 +21,7 @@
   <!-- endbuild -->
 
 
+
   <link rel="stylesheet" href="../css/wj.css">
 
 
@@ -68,6 +69,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -193,6 +195,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -219,7 +222,7 @@
                   <p>商品名称</p>
                   <p>
                     <span class="text-danger">￥ 1200学币</span>
-                    <button class="btn btn-primary pull-right btm20">兑换</button>
+                    <button class="btn btn-primary pull-right btm15">兑换</button>
                   </p>
                 </div>
               </div>
@@ -234,7 +237,7 @@
                   <p>商品名称</p>
                   <p>
                     <span>￥ 1200学币</span>
-                    <button class="btn pull-right">兑换</button>
+                    <button class="btn pull-right btm15">兑换</button>
                   </p>
                 </div>
               </div>
@@ -249,7 +252,7 @@
                   <p>商品名称</p>
                   <p>
                     <span class="text-danger">￥ 1200学币</span>
-                    <button class="btn btn-primary pull-right">兑换</button>
+                    <button class="btn btn-primary pull-right btm15">兑换</button>
                   </p>
                 </div>
               </div>
@@ -264,7 +267,7 @@
                   <p>商品名称</p>
                   <p>
                     <span class="text-danger">￥ 1200学币</span>
-                    <button class="btn btn-primary pull-right">兑换</button>
+                    <button class="btn btn-primary pull-right btm15">兑换</button>
                   </p>
                 </div>
               </div>
@@ -279,7 +282,7 @@
                   <p>商品名称</p>
                   <p>
                     <span class="text-danger">￥ 1200学币</span>
-                    <button class="btn btn-primary pull-right">兑换</button>
+                    <button class="btn btn-primary pull-right btm15">兑换</button>
                   </p>
                 </div>
               </div>
@@ -294,7 +297,7 @@
                   <p>商品名称</p>
                   <p>
                     <span>￥ 1200学币</span>
-                    <button class="btn pull-right">兑换</button>
+                    <button class="btn pull-right btm15">兑换</button>
                   </p>
                 </div>
               </div>
@@ -309,7 +312,7 @@
                   <p>商品名称</p>
                   <p>
                     <span class="text-danger">￥ 1200学币</span>
-                    <button class="btn btn-primary pull-right">兑换</button>
+                    <button class="btn btn-primary pull-right btm15">兑换</button>
                   </p>
                 </div>
               </div>
@@ -324,7 +327,7 @@
                   <p>商品名称</p>
                   <p>
                     <span class="text-danger">￥ 1200学币</span>
-                    <button class="btn btn-primary pull-right">兑换</button>
+                    <button class="btn btn-primary pull-right btm15">兑换</button>
                   </p>
                 </div>
               </div>
@@ -361,6 +364,7 @@
                 </div>  
         <!-- endbuild -->
 
+
       </div>
       
     </section>
@@ -371,6 +375,7 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -394,6 +399,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 <script src="../js/mall.js"></script>
