--- a/src/html/studentmanagement_class.html
+++ b/src/html/studentmanagement_class.html
@@ -22,6 +22,7 @@
 
 
 
+
   <link rel="stylesheet" href="../css/wj.css">
 
 
@@ -67,6 +68,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -192,6 +194,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -230,7 +233,7 @@
                         <td>10</td>
                         <td>
                           <a class="btn btn-primary jq-createclass" href="javascript:;">编辑班级</a>
-                          <a class="btn btn-primary jq-deleteclass" href="javascript:;">删除班级</a>
+                          <a class="btn btn-danger jq-deleteclass" href="javascript:;">删除班级</a>
                         </td>
                       </tr>
                       <tr>
@@ -239,7 +242,7 @@
                         <td>10</td>
                         <td>
                           <a class="btn btn-primary jq-createclass" href="javascript:;">编辑班级</a>
-                          <a class="btn btn-primary jq-deleteclass" href="javascript:;">删除班级</a>
+                          <a class="btn btn-danger jq-deleteclass" href="javascript:;">删除班级</a>
                         </td>
                       </tr>
                       <tr>
@@ -248,7 +251,7 @@
                         <td>10</td>
                         <td>
                           <a class="btn btn-primary jq-createclass" href="javascript:;">编辑班级</a>
-                          <a class="btn btn-primary jq-deleteclass" href="javascript:;">删除班级</a>
+                          <a class="btn btn-danger jq-deleteclass" href="javascript:;">删除班级</a>
                         </td>
                       </tr>
                     </tbody>
@@ -293,6 +296,7 @@
 
 
 
+
               </div>
             </div>
           </div>
@@ -306,6 +310,7 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -329,6 +334,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
