--- a/src/html/intelligent_real.html
+++ b/src/html/intelligent_real.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
-
+  <link rel="stylesheet" href="../css/mian_xc.css">
 </head>
 
 <body>
@@ -59,6 +59,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
     <!-- build:sidebar -->
@@ -204,6 +205,7 @@
     <!-- endbuild -->
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -212,7 +214,11 @@
         </div>
         <div class="row">
           <div class="col-xs-12">
-            这里是内容
+            <div class="xc-text-group col-xs-6 center-block">
+              <div class="xc-text-item">小升初<br>十套试卷</div>
+              <div class="xc-text-item">中考冲刺<br>十套试卷</div>
+              <div class="xc-text-item">高考冲刺<br>十套试卷</div>
+            </div>
           </div>
         </div>
       </div>
@@ -224,6 +230,7 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
   </div>
@@ -239,6 +246,7 @@
   <script src="../js/vendor/jquery-localize-i18n/dist/jquery.localize.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 </body>
