--- a/src/html/synchronize.html
+++ b/src/html/synchronize.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="../css/app.css" id="maincss">
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
-
+  <link rel="stylesheet" href="../css/mian_xc.css">
 </head>
 
 <body>
@@ -47,7 +47,9 @@
           </ul>
           <ul class="nav navbar-nav navbar-right mu-head-user">
             <li>
-              <span><i class="fa fa-user"></i>admin</span><span>|</span>
+              <span>
+                <i class="fa fa-user"></i>admin</span>
+              <span>|</span>
             </li>
             <li>
               <a href="#">
@@ -59,6 +61,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
     <!-- build:sidebar -->
@@ -204,6 +207,7 @@
     <!-- endbuild -->
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -212,19 +216,124 @@
         </div>
         <div class="row">
           <div class="col-xs-12">
-            这里是内容
-            <a href="synchronize_unit.html" class="btn btn-info">单元</a>
+            <table class="table table-bordered">
+              <thead style="background-color: rgba(243, 243, 243, 1)">
+                <tr>
+                  <th class="col-xs-2">课程阶段
+                    <button type="button" class="btn btn-primary btn-xs pull-right">新增阶段</button>
+                  </th>
+                  <th class="col-xs-4">选择版本
+                    <button type="button" class="btn btn-primary btn-xs pull-right">新增教材版本</button>
+                  </th>
+                  <th class="col-xs-4">课本
+                    <button type="button" class="btn btn-primary btn-xs pull-right">新增课本</button>
+                  </th>
+                  <th class="col-xs-2">单元
+                    <button type="button" class="btn btn-primary btn-xs pull-right">新增单元</button>
+                  </th>
+                </tr>
+              </thead>
+              <tbody style="background-color: #fff">
+                <tr>
+                  <td>启蒙课程
+                    <button type="button" class="btn btn-primary btn-xs pull-right">删除</button>
+                  </td>
+                  <td>教材版本
+                    <button type="button" class="btn btn-primary btn-xs pull-right">删除</button>
+                  </td>
+                  <td>第一册（一年级上学期）
+                    <button type="button" class="btn btn-primary btn-xs pull-right">删除</button>
+                  </td>
+                  <td>Unit 1 Part1
+                    <button type="button" class="btn btn-primary btn-xs pull-right">删除</button>
+                    <button type="button" class="btn btn-primary btn-xs pull-right">详情</button>
+                  </td>
+                </tr>
+                <tr>
+                  <td>小学英语
+                    <button type="button" class="btn btn-primary btn-xs pull-right">删除</button>
+                  </td>
+                  <td>教材版本
+                    <button type="button" class="btn btn-primary btn-xs pull-right">删除</button>
+                  </td>
+                  <td>第一册（一年级上学期）
+                    <button type="button" class="btn btn-primary btn-xs pull-right">删除</button>
+                  </td>
+                  <td>Unit 1 Part1
+                    <button type="button" class="btn btn-primary btn-xs pull-right">删除</button>
+                    <button type="button" class="btn btn-primary btn-xs pull-right">详情</button>
+                  </td>
+                </tr>
+                <tr>
+                  <td>初中英语
+                    <button type="button" class="btn btn-primary btn-xs pull-right">删除</button>
+                  </td>
+                  <td>教材版本
+                    <button type="button" class="btn btn-primary btn-xs pull-right">删除</button>
+                  </td>
+                  <td>第一册（一年级上学期）
+                    <button type="button" class="btn btn-primary btn-xs pull-right">删除</button>
+                  </td>
+                  <td>Unit 1 Part1
+                    <button type="button" class="btn btn-primary btn-xs pull-right">删除</button>
+                    <button type="button" class="btn btn-primary btn-xs pull-right">详情</button>
+                  </td>
+                </tr>
+                <tr>
+                  <td>高中英语
+                    <button type="button" class="btn btn-primary btn-xs pull-right">删除</button>
+                  </td>
+                  <td>教材版本
+                    <button type="button" class="btn btn-primary btn-xs pull-right">删除</button>
+                  </td>
+                  <td>第一册（一年级上学期）
+                    <button type="button" class="btn btn-primary btn-xs pull-right">删除</button>
+                  </td>
+                  <td>Unit 1 Part1
+                    <button type="button" class="btn btn-primary btn-xs pull-right">删除</button>
+                    <button type="button" class="btn btn-primary btn-xs pull-right">详情</button>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="visHideen"></td>
+                  <td>教材版本
+                    <button type="button" class="btn btn-primary btn-xs pull-right">删除</button>
+                  </td>
+                  <td>第一册（一年级上学期）
+                    <button type="button" class="btn btn-primary btn-xs pull-right">删除</button>
+                  </td>
+                  <td>Unit 1 Part1
+                    <button type="button" class="btn btn-primary btn-xs pull-right">删除</button>
+                    <button type="button" class="btn btn-primary btn-xs pull-right">详情</button>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="visHideen"></td>
+                  <td>教材版本
+                    <button type="button" class="btn btn-primary btn-xs pull-right">删除</button>
+                  </td>
+                  <td>第一册（一年级上学期）
+                    <button type="button" class="btn btn-primary btn-xs pull-right">删除</button>
+                  </td>
+                  <td>Unit 1 Part1
+                    <button type="button" class="btn btn-primary btn-xs pull-right">删除</button>
+                    <button type="button" class="btn btn-primary btn-xs pull-right">详情</button>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
           </div>
         </div>
       </div>
     </section>
     <!-- 主要内容END -->
-    
+
     <!-- build:foot -->
     <footer>
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
   </div>
@@ -240,6 +349,7 @@
   <script src="../js/vendor/jquery-localize-i18n/dist/jquery.localize.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 </body>
