--- a/src/html/datastatistics.html
+++ b/src/html/datastatistics.html
@@ -19,6 +19,7 @@
 
 
 
+
 </head>
 
 <body>
@@ -61,6 +62,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -163,6 +165,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -180,7 +183,7 @@
                   <div class="h2 mt0">66
                     <small>人</small>
                   </div>
-                  <div class="text-uppercase">我的学员</div>
+                  <div class="text-uppercase">全部有效学员</div>
                 </div>
               </div>
             </div>
@@ -215,12 +218,42 @@
               </div>
             </div>
           </div>
+          <div class="col-lg-6">
+              <div class="panel widget bg-purple">
+                <div class="row row-table">
+                  <div class="col-xs-4 text-center bg-purple-dark pv-lg">
+                    <em class="icon-user-follow fa-3x"></em>
+                  </div>
+                  <div class="col-xs-8 pv-lg">
+                    <div class="h2 mt0">100
+                      <small>￥</small>
+                    </div>
+                    <div class="text-uppercase">今日充值</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="panel widget bg-danger">
+                  <div class="row row-table">
+                    <div class="col-xs-4 text-center bg-danger-dark pv-lg">
+                      <em class="icon-user-follow fa-3x"></em>
+                    </div>
+                    <div class="col-xs-8 pv-lg">
+                      <div class="h2 mt0">100
+                        <small>￥</small>
+                      </div>
+                      <div class="text-uppercase">当前余额</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
         </div>
 
         <div class="row">
           <div class="col-lg-12">
             <div id="" class="panel panel-primary">
-              <div class="panel-heading">今日学况</div>
+              <div class="panel-heading">续费情况</div>
               <div class="panel-body">
                 <div class="col-lg-3 col-sm-6">
                   <div class="panel widget">
@@ -229,7 +262,7 @@
                         <em class="icon-user-unfollow fa-2x"></em>
                       </div>
                       <h3 class="mt0">33</h3>
-                      <p class="text-muted">未学人数</p>
+                      <p class="text-muted">今日续费学员</p>
                     </div>
                   </div>
                 </div>
@@ -241,7 +274,7 @@
                         <em class="icon-clock fa-2x"></em>
                       </div>
                       <h3 class="mt0">03:30:12</h3>
-                      <p class="text-muted">人均有效学习时长</p>
+                      <p class="text-muted">今日续费时长</p>
                     </div>
                   </div>
                 </div>
@@ -252,7 +285,8 @@
                         <em class="fa fa-star-half-o fa-2x"></em>
                       </div>
                       <h3 class="mt0">12</h3>
-                      <p class="text-muted">人均学币获取</p>
+                      <p class="text-muted">今日流失学员</p>
+                      <span class="text-danger">30天前过期且未续费的学员</span>
                     </div>
                   </div>
                 </div>
@@ -263,7 +297,8 @@
                         <em class="fa fa-star fa-2x"></em>
                       </div>
                       <h3 class="mt0">388</h3>
-                      <p class="text-muted">总学币获取</p>
+                      <p class="text-muted">今日体验转化</p>
+                      <p class="text-danger">体验账号今日完成续费</p>
                     </div>
                   </div>
                 </div>
@@ -276,7 +311,7 @@
         <div class="row">
           <div class="col-lg-12">
             <div id="" class="panel panel-primary">
-              <div class="panel-heading">学况查询 </div>
+              <div class="panel-heading">续费查询 </div>
               <div class="panel-body">
                 <div class="col-lg-3 col-sm-6">
                   <div class="panel widget">
@@ -345,6 +380,7 @@
 
 
 
+
   </div>
 
   <!-- build:js -->
@@ -358,6 +394,7 @@
   <script src="../js/vendor/jquery-localize-i18n/dist/jquery.localize.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
