--- a/src/html/16_study_word_2.html
+++ b/src/html/16_study_word_2.html
@@ -74,7 +74,7 @@
             <span class="title">智学单词-新词预习</span>
             <span class="unit">牛津上海版——二年级上册 Unit 1</span>
             <a href="javascript:;" class="close-icon"></a>
-            <a href="javascript:;" class="question-icon"></a>
+            <a href="javascript:;" class="question-icon" id="xc-question"></a>
           </p>
           <div class="practice-ct">
             <div class="clearfix content-minheight">
@@ -120,6 +120,42 @@
       </div>
     </div> 
   </div>
+  <div class="xc-banner">
+    <div class="xc-banner-marker"></div>
+    <div class="xc-banner-body">
+      <h2 class="xc-banner-title">教程说明
+        <img class="xc-banner-close" src="../img/xc-banner-close.png" alt="">
+      </h2>
+      <div class="xc-banner-items-box">
+        <div class="xc-banner-items">
+          <div class="xc-banner-item active">
+            <img class="xc-banner-img" src="../img/13_words_1.png" alt="教程">
+          </div>
+          <div class="xc-banner-item">
+            <img class="xc-banner-img" src="../img/13_words_2.png" alt="教程">
+          </div>
+          <div class="xc-banner-item">
+            <img class="xc-banner-img" src="../img/13_words_3.png" alt="教程">
+          </div>
+          <div class="xc-banner-item">
+            <img class="xc-banner-img" src="../img/13_words_4.png" alt="教程">
+          </div>
+          <div class="xc-banner-item">
+            <img class="xc-banner-img" src="../img/13_words_5.png" alt="教程">
+          </div>
+          <div class="xc-banner-item">
+            <img class="xc-banner-img" src="../img/13_words_6.png" alt="教程">
+          </div>
+        </div>
+      </div>
+      <div class="xc-banner-btns">
+        <span class="active">1</span>/
+        <span>6</span>
+        <span class="xc-banner-btn xc-banner-prv"></span>
+        <span class="xc-banner-btn xc-banner-next"></span>
+      </div>
+    </div>
+  </div>
   <!-- build:foot -->
   <!-- 底部 -->
   <div class="footer">
@@ -139,6 +175,7 @@
 
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
   <script src="../js/main_wj.js"></script>
+  <script src="../js/main_xc.js"></script>
 </body>
 
 </html>
