--- a/src/html/17_study_word_2.html
+++ b/src/html/17_study_word_2.html
@@ -131,31 +131,31 @@
       <div class="xc-banner-items-box">
         <div class="xc-banner-items">
           <div class="xc-banner-item active">
-            <img class="xc-banner-img" src="../img/17_words_1.png" alt="教程">
+            <img class="xc-banner-img" src="../img/017/17_words_1.png" alt="教程">
           </div>
           <div class="xc-banner-item">
-            <img class="xc-banner-img" src="../img/17_words_2.png" alt="教程">
+            <img class="xc-banner-img" src="../img/017/17_words_2.png" alt="教程">
           </div>
           <div class="xc-banner-item">
-            <img class="xc-banner-img" src="../img/17_words_3.png" alt="教程">
+            <img class="xc-banner-img" src="../img/017/17_words_3.png" alt="教程">
           </div>
           <div class="xc-banner-item">
-            <img class="xc-banner-img" src="../img/17_words_4.png" alt="教程">
+            <img class="xc-banner-img" src="../img/017/17_words_4.png" alt="教程">
           </div>
           <div class="xc-banner-item">
-            <img class="xc-banner-img" src="../img/17_words_5.png" alt="教程">
+            <img class="xc-banner-img" src="../img/017/17_words_5.png" alt="教程">
           </div>
           <div class="xc-banner-item">
-            <img class="xc-banner-img" src="../img/17_words_6.png" alt="教程">
+            <img class="xc-banner-img" src="../img/017/17_words_6.png" alt="教程">
           </div>
           <div class="xc-banner-item">
-            <img class="xc-banner-img" src="../img/17_words_7.png" alt="教程">
+            <img class="xc-banner-img" src="../img/017/17_words_7.png" alt="教程">
           </div>
           <div class="xc-banner-item">
-            <img class="xc-banner-img" src="../img/17_words_8.png" alt="教程">
+            <img class="xc-banner-img" src="../img/017/17_words_8.png" alt="教程">
           </div>
           <div class="xc-banner-item">
-            <img class="xc-banner-img" src="../img/17_words_9.png" alt="教程">
+            <img class="xc-banner-img" src="../img/017/17_words_9.png" alt="教程">
           </div>
         </div>
       </div>
