--- a/src/html/22_preview.html
+++ b/src/html/22_preview.html
@@ -136,28 +136,25 @@
         <div class="xc-banner-items-box">
           <div class="xc-banner-items">
             <div class="xc-banner-item active">
-              <img class="xc-banner-img" src="../img/13_words_1.png" alt="教程">
+              <img class="xc-banner-img" src="../img/22_word_1.png" alt="教程">
             </div>
             <div class="xc-banner-item">
-              <img class="xc-banner-img" src="../img/13_words_2.png" alt="教程">
+              <img class="xc-banner-img" src="../img/22_word_2.png" alt="教程">
             </div>
             <div class="xc-banner-item">
-              <img class="xc-banner-img" src="../img/13_words_3.png" alt="教程">
+              <img class="xc-banner-img" src="../img/22_word_3.png" alt="教程">
             </div>
             <div class="xc-banner-item">
-              <img class="xc-banner-img" src="../img/13_words_4.png" alt="教程">
+              <img class="xc-banner-img" src="../img/22_word_4.png" alt="教程">
             </div>
             <div class="xc-banner-item">
-              <img class="xc-banner-img" src="../img/13_words_5.png" alt="教程">
-            </div>
-            <div class="xc-banner-item">
-              <img class="xc-banner-img" src="../img/13_words_6.png" alt="教程">
+              <img class="xc-banner-img" src="../img/22_word_5.png" alt="教程">
             </div>
           </div>
         </div>
         <div class="xc-banner-btns">
           <span class="active">1</span>/
-          <span>6</span>
+          <span>5</span>
           <span class="xc-banner-btn xc-banner-prv"></span>
           <span class="xc-banner-btn xc-banner-next"></span>
         </div>
