--- a/src/html/23_newsetence_2.html
+++ b/src/html/23_newsetence_2.html
@@ -129,41 +129,41 @@
     </div>
   </div>
   <div class="xc-banner">
-      <div class="xc-banner-marker"></div>
-      <div class="xc-banner-body">
-        <h2 class="xc-banner-title">教程说明
-          <img class="xc-banner-close" src="../img/xc-banner-close.png" alt="">
-        </h2>
-        <div class="xc-banner-items-box">
-          <div class="xc-banner-items">
-            <div class="xc-banner-item active">
-              <img class="xc-banner-img" src="../img/13_words_1.png" alt="教程">
-            </div>
-            <div class="xc-banner-item">
-              <img class="xc-banner-img" src="../img/13_words_2.png" alt="教程">
-            </div>
-            <div class="xc-banner-item">
-              <img class="xc-banner-img" src="../img/13_words_3.png" alt="教程">
-            </div>
-            <div class="xc-banner-item">
-              <img class="xc-banner-img" src="../img/13_words_4.png" alt="教程">
-            </div>
-            <div class="xc-banner-item">
-              <img class="xc-banner-img" src="../img/13_words_5.png" alt="教程">
-            </div>
-            <div class="xc-banner-item">
-              <img class="xc-banner-img" src="../img/13_words_6.png" alt="教程">
-            </div>
+    <div class="xc-banner-marker"></div>
+    <div class="xc-banner-body">
+      <h2 class="xc-banner-title">教程说明
+        <img class="xc-banner-close" src="../img/xc-banner-close.png" alt="">
+      </h2>
+      <div class="xc-banner-items-box">
+        <div class="xc-banner-items">
+          <div class="xc-banner-item active">
+            <img class="xc-banner-img" src="../img/023/23_words_1.png" alt="教程">
+          </div>
+          <div class="xc-banner-item">
+            <img class="xc-banner-img" src="../img/023/23_words_2.png" alt="教程">
+          </div>
+          <div class="xc-banner-item">
+            <img class="xc-banner-img" src="../img/023/23_words_3.png" alt="教程">
+          </div>
+          <div class="xc-banner-item">
+            <img class="xc-banner-img" src="../img/023/23_words_4.png" alt="教程">
+          </div>
+          <div class="xc-banner-item">
+            <img class="xc-banner-img" src="../img/023/23_words_5.png" alt="教程">
+          </div>
+          <div class="xc-banner-item">
+            <img class="xc-banner-img" src="../img/023/23_words_6.png" alt="教程">
           </div>
         </div>
-        <div class="xc-banner-btns">
-          <span class="active">1</span>/
-          <span>6</span>
-          <span class="xc-banner-btn xc-banner-prv"></span>
-          <span class="xc-banner-btn xc-banner-next"></span>
-        </div>
+      </div>
+      <div class="xc-banner-btns">
+        <span class="active">1</span>/
+        <span>6</span>
+        <span class="xc-banner-btn xc-banner-prv"></span>
+        <span class="xc-banner-btn xc-banner-next"></span>
       </div>
     </div>
+  </div>
   <!-- build:foot -->
   <!-- 底部 -->
   <div class="footer">
