--- a/src/html/16_study_word.html
+++ b/src/html/16_study_word.html
@@ -132,28 +132,28 @@
       <div class="xc-banner-items-box">
         <div class="xc-banner-items">
           <div class="xc-banner-item active">
-            <img class="xc-banner-img" src="../img/16_words_1.png" alt="教程">
+            <img class="xc-banner-img" src="../img/016/16_words_1.png" alt="教程">
           </div>
           <div class="xc-banner-item">
-            <img class="xc-banner-img" src="../img/16_words_2.png" alt="教程">
+            <img class="xc-banner-img" src="../img/016/16_words_2.png" alt="教程">
           </div>
           <div class="xc-banner-item">
-            <img class="xc-banner-img" src="../img/16_words_3.png" alt="教程">
+            <img class="xc-banner-img" src="../img/016/16_words_3.png" alt="教程">
           </div>
           <div class="xc-banner-item">
-            <img class="xc-banner-img" src="../img/16_words_4.png" alt="教程">
+            <img class="xc-banner-img" src="../img/016/16_words_4.png" alt="教程">
           </div>
           <div class="xc-banner-item">
-            <img class="xc-banner-img" src="../img/16_words_5.png" alt="教程">
+            <img class="xc-banner-img" src="../img/016/16_words_5.png" alt="教程">
           </div>
           <div class="xc-banner-item">
-            <img class="xc-banner-img" src="../img/16_words_6.png" alt="教程">
+            <img class="xc-banner-img" src="../img/016/16_words_6.png" alt="教程">
           </div>
           <div class="xc-banner-item">
-            <img class="xc-banner-img" src="../img/16_words_7.png" alt="教程">
+            <img class="xc-banner-img" src="../img/016/16_words_7.png" alt="教程">
           </div>
           <div class="xc-banner-item">
-            <img class="xc-banner-img" src="../img/16_words_8.png" alt="教程">
+            <img class="xc-banner-img" src="../img/016/16_words_8.png" alt="教程">
           </div>
         </div>
       </div>
